--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -17,7 +17,9 @@
 
         <div class="row">
         <div class="col-md-3">
-            {{- partial "menu.html" . -}}
+            {{ if ne .Kind "home" }}
+                {{- partial "menu.html" . -}}
+            {{ end }}
         </div>
 
         <main id="content" class="col-md-9">
