--- a/themes/burns-exhibits/layouts/index.html
+++ b/themes/burns-exhibits/layouts/index.html
@@ -1,10 +1,5 @@
 {{ define "main" }}
   <main>
-      {{ .Content }}
-          <ul class="contents">
-            {{- range .Site.Home.Sections.ByWeight}}
-            <li>{{.}} is the title</li>
-          {{ end }}
-          </ul>
+    {{ partial "exhibit-list" . }}
   </main>
 {{ end }}
