--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
             </div>
         </header>
 
-        <div class="row">
+        <div class="row main-page-stuff">
         <div class="col-md-3">
             {{ if ne .Kind "home" }}
                 {{- partial "menu.html" . -}}
