Add headlines for large figures. Fixes #9

--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap/bootstrap';
 @import 'library-header';
-@import 'large-gallery-figure';
+@import 'shortcodes/large-gallery-figure';
 
 
 $small_font: 16px;
