--- a/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
@@ -1,6 +1,7 @@
-<figure>
-    <img src={{ .Get "src" }} alt="{{ .Get "alt" }}">
-    <figcaption><h3>{{ .Get "headline" }}</h3>
+<figure class="gallery-figure">
+    <img class="gallery-figure__img" src={{ .Get "src" }} alt="{{ .Get "alt" }}">
+    <figcaption class="gallery-figure__caption">
+        <h3>{{ .Get "headline" }}</h3>
         <p>{{ .Inner }}</p>
     </figcaption>
 </figure>
