--- a/themes/burns-exhibits/layouts/partials/head.html
+++ b/themes/burns-exhibits/layouts/partials/head.html
@@ -9,7 +9,7 @@
   <meta name="MobileOptimized" content="320" />
 
   <meta name="viewport" content="width=device-width,minimum-scale=1">
-  {{ .Hugo.Generator }}
+  {{ hugo.Generator }}
 
   {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
   <meta NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
