--- a/themes/burns-exhibits/layouts/partials/menu.html
+++ b/themes/burns-exhibits/layouts/partials/menu.html
@@ -6,7 +6,7 @@
     {{ if ge (len $sectionPages) 1 }}
     <ul>
         {{ range where .Site.Pages "Section" .Section }}
-          <li class="{{- if eq .URL $currentNode.URL}} active{{end}}
+          <li class="{{- if eq .RelPermalink $currentNode.RelPermalink}} active{{end}}
           ">              <a href="{{ .RelPermalink}}">
               {{safeHTML .Params.Pre}}{{.LinkTitle}}{{safeHTML .Params.Post}}
             </a></li>
