--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -58,6 +58,7 @@ main {
         img {
             max-width: 100%;
             margin-bottom: 1em;
+            image-orientation: from-image;
         }
     }
 }
