--- a/themes/burns-exhibits/layouts/shortcodes/figure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/figure.html
@@ -1,5 +1,10 @@
+{{/* Resize and compress images */}}
+{{ $name := replace (.Get "src") "../" "" }}
+{{ $raw_img := .Page.CurrentSection.Resources.GetMatch $name }}
+{{ $resized := $raw_img.Resize "300x q80"}}
+
 <figure class="embedded-figure embedded-figure--{{ .Get "side" }}">
-        <img class="embedded-figure__img" src={{ .Get "src" }} alt="{{ .Get "alt" }}">
+        <img class="embedded-figure__img" src={{ $resized.RelPermalink }} alt="{{ .Get "alt" }}">
         <figcaption class="embedded-figure__caption">
             <h3>{{ .Get "headline" }}</h3>
         </figcaption>
