--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'home-page';
 
 @import 'prev-next-nav';
+@import 'breadcrumbs';
 
 // Shortcodes
 @import 'shortcodes/large-gallery-figure';
