--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -9,11 +9,11 @@
         </div>
     </header>
     <div class="container">
-        <header class="col-md-12">
+        <div class="row">
             <div class="col-md-12">
                 {{- partial "header.html" . -}}
             </div>
-        </header>
+        </div>
 
         <div class="row main-page-stuff">
         <div class="col-md-3">
