Clear figure images on the side that they are floated. Fixes #14

--- a/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
@@ -4,10 +4,12 @@
 
     &--right {
         float: right;
+        clear: right;
     }
 
     &--left {
         float: left;
+        clear: left;
     }
 
     &--center {
