--- a/themes/burns-exhibits/assets/sass/variables.scss
+++ b/themes/burns-exhibits/assets/sass/variables.scss
@@ -3,3 +3,6 @@ $heading_font: 'Open Sans', sans-serif;
 
 $small_font_size: 15px;
 $med_font_size: 18px;
+
+$breadcrumb-divider: quote(">") !default;
+$breadcrumb-bg: white !default;
