--- a/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
@@ -1,26 +1,34 @@
 .embedded-figure {
-    max-width: 33%;
+    max-width: 100%;
     padding: 1rem;
+}
 
-    &--right {
-        float: right;
-        clear: right;
-    }
 
-    &--left {
-        float: left;
-        clear: left;
-    }
+@media (min-width: #{map-get($grid-breakpoints, "lg")}) {
+    .embedded-figure {
+        max-width: 33%;
+        padding: 1rem;
 
-    &--center {
-        max-width: 100%;
-    }
+        &--right {
+            float: right;
+            clear: right;
+        }
 
-    &__caption {
-        font-size: $small_font_size;
-    }
+        &--left {
+            float: left;
+            clear: left;
+        }
 
-    &__img {
-        max-width: 100%;
+        &--center {
+            max-width: 100%;
+        }
+
+        &__caption {
+            font-size: $small_font_size;
+        }
+
+        &__img {
+            max-width: 100%;
+        }
     }
 }
