--- a/themes/burns-exhibits/layouts/partials/menu.html
+++ b/themes/burns-exhibits/layouts/partials/menu.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     {{- $currentNode := . }}
     {{- $showvisitedlinks := .Site.Params.showVisitedLinks -}}
     
