--- a/themes/burns-exhibits/assets/sass/prev-next-nav.scss
+++ b/themes/burns-exhibits/assets/sass/prev-next-nav.scss
@@ -32,3 +32,32 @@
         text-align: right
     }
 }
+
+@media (max-width: #{map-get($grid-breakpoints, "md")}) {
+
+    a.next-link,
+    a.prev-link {
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding: 1em;
+        text-align: center;
+        width: 100%;
+        box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.2);
+        background: #f3f5f4;
+    }
+
+    form.mobile-menu {
+        margin-bottom: 2em;
+    }
+
+    .prev-wrapper {
+        top: 4em;
+    }
+
+    .prev-wrapper,
+    .next-wrapper {
+        box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.2);
+        background-color: #111;
+    }
+}
