Clean up and comment SCSS.

--- a/themes/burns-exhibits/assets/sass/breadcrumbs.scss
+++ b/themes/burns-exhibits/assets/sass/breadcrumbs.scss
@@ -1,5 +1,5 @@
 /* Background color and separator set in variables.scss */
 .breadcrumb {
-    font-size: $small_font_size;
+    font-size: $font-size-sm;
     margin-top: 1em;
 }
