--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -14,20 +14,6 @@
 @import 'shortcodes/gallery-row';
 @import 'shortcodes/embedded-figure';
 
-body {
-    font-family: $body_font;
-    font-size: $med_font_size;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: $heading_font;
-}
-
 nav {
     ul {
         padding: 0;
@@ -41,21 +27,32 @@ nav {
     }
 }
 
-@media (max-width: #{map-get($grid-breakpoints, "md")}) {
-    /* On mobile this menu should be visible to screen readers. */
-    .non-mobile-menu {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        white-space: nowrap;
-        border: 0; 
-    }
+.non-mobile-menu {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
+/* iPad and bigger */
 @media (min-width: #{map-get($grid-breakpoints, "md")}) {
+
+    /* Display non-mobile menu and hide mobile menu */
+    .non-mobile-menu {
+        position: initial;
+        width: initial;
+        height: initial;
+        padding: initial;
+        overflow: initial;
+        clip: initial;
+        white-space: initial;
+        border: none;
+    }
+
     .mobile-menu {
         display: none;
     }
@@ -66,12 +63,12 @@ main {
         flex: 1 1 0;
 
         h4 {
-            font-size: $small_font_size;
+            font-size: $font-size-sm;
             font-weight: 600;
         }
 
         p {
-            font-size: $small_font_size;
+            font-size: $font-size-sm;
         }
 
         img {
