--- a/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/embedded-figure.scss
@@ -1,34 +1,41 @@
+/* Figures (images + captions) floating in narrative text.
+
+   For .embedded-figure elements inside .gallery-row elements,
+   see gallery-row.scss */
+
+/* At iPad/mobile breakpoints, figures should occupy 100% of 
+   text width. */
 .embedded-figure {
     max-width: 100%;
     padding: 1rem;
 }
 
-
+/* Styles for desktop. */
 @media (min-width: #{map-get($grid-breakpoints, "lg")}) {
     .embedded-figure {
         max-width: 33%;
         padding: 1rem;
+    }
 
-        &--right {
-            float: right;
-            clear: right;
-        }
+    .embedded-figure--right {
+        float: right;
+        clear: right;
+    }
 
-        &--left {
-            float: left;
-            clear: left;
-        }
+    .embedded-figure--left {
+        float: left;
+        clear: left;
+    }
 
-        &--center {
-            max-width: 100%;
-        }
+    .embedded-figure--center {
+        max-width: 100%;
+    }
 
-        &__caption {
-            font-size: $small_font_size;
-        }
+    .embedded-figure__caption {
+        font-size: $font-size-sm;
+    }
 
-        &__img {
-            max-width: 100%;
-        }
+    .embedded-figure__img {
+        max-width: 100%;
     }
 }
