Use BEM for navigation elements.

--- a/themes/burns-exhibits/assets/sass/shortcodes/gallery-row.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/gallery-row.scss
@@ -1,3 +1,9 @@
+/* Figures on gallery pages. On desktop, they are all in a 
+   row.
+     
+   For .embedded-figure elements inside .gallery-row elements,
+   see gallery-row.scss */
+
 /* Defines how figures appear in gallery rows. Only applies
    to breakpoints larger than Bootstrap's "medium", which 
    is iPad width. */
