--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -1,11 +1,13 @@
-// Default values.
+// Changes we make to the Bootstrap default variables.
 @import 'variables';
 
 @import 'bootstrap/bootstrap';
 
-// Red header
+// Red BC Libraries header
 @import 'library-header';
 
+// Navigation
+@import 'exhibit-nav.scss';
 @import 'prev-next-nav';
 @import 'breadcrumbs';
 
@@ -13,52 +15,11 @@
 @import 'shortcodes/large-gallery-figure';
 @import 'shortcodes/gallery-row';
 @import 'shortcodes/embedded-figure';
-
-nav {
-    ul {
-        padding: 0;
-        list-style: none;
-
-        li {
-            &.active {
-                font-weight: 600;
-            }
-        }
-    }
-}
-
-.non-mobile-menu {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-}
-
-/* iPad and bigger */
-@media (min-width: #{map-get($grid-breakpoints, "md")}) {
-
-    /* Display non-mobile menu and hide mobile menu */
-    .non-mobile-menu {
-        position: initial;
-        width: initial;
-        height: initial;
-        padding: initial;
-        overflow: initial;
-        clip: initial;
-        white-space: initial;
-        border: none;
-    }
-
-    .mobile-menu {
-        display: none;
-    }
-}
+@import 'shortcodes/in-text-heading';
 
 main {
+
+    /* Common styles for all figures. */
     figure {
         flex: 1 1 0;
 
@@ -77,10 +38,6 @@ main {
             image-orientation: from-image;
         }
     }
-}
-
-.in-text-heading {
-    margin-top: 1.5em;
 }
 
 footer {
