--- a/themes/burns-exhibits/layouts/partials/menu.html
+++ b/themes/burns-exhibits/layouts/partials/menu.html
@@ -1,13 +1,13 @@
-<nav>
+<nav class="exhibit-nav">
     {{- $currentNode := . }}
     {{- $showvisitedlinks := .Site.Params.showVisitedLinks -}}
     
     {{ $sectionPages := where .Site.Pages "Section" .Section }}
     {{ if ge (len $sectionPages) 1 }}
-    <ul class="non-mobile-menu">
+    <ul class="exhibit-nav__menu exhibit-nav--desktop">
         {{ range where .Site.Pages "Section" .Section }}
             {{ $active := eq .RelPermalink $currentNode.RelPermalink }}
-            <li class="{{- if $active }}active{{end}}">
+            <li class="exhibit-nav__item--{{- if $active }}active{{end}}">
                 <a href="{{ .RelPermalink}}">{{.LinkTitle}}</a>
             </li>
         {{ end }}
@@ -15,7 +15,7 @@
     {{ end }}
 
     {{ if ge (len $sectionPages) 1 }}
-    <form class="mobile-menu" aria-hidden="true">
+    <form class="exhibit-nav--mobile" aria-hidden="true">
         <label for="page-changer">Go to:</label>
         <select id="page-changed" onchange="window.location.replace(this.options[this.selectedIndex].value)">
                 {{ range where .Site.Pages "Section" .Section }}
