--- a/themes/burns-exhibits/layouts/partials/head.html
+++ b/themes/burns-exhibits/layouts/partials/head.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800" rel="stylesheet">
 
   {{ $style := resources.Get "sass/style.scss" | resources.ToCSS |  resources.Minify | resources.Fingerprint }}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
   {{ $stylesheet := $.Site.Data.assets.app }}
   {{ with $stylesheet.css }}
