Add initial lightbox

--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -17,6 +17,9 @@
 @import 'shortcodes/embedded-figure';
 @import 'shortcodes/in-text-heading';
 
+// Modal window (lightbox)
+@import 'modal';
+
 main {
 
     /* Common styles for all figures. */
