--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -31,5 +31,7 @@
             {{- partial "footer.html" . -}}
         </footer>
     </div>
+    {{ $script := resources.Get "js/main.js" }}
+    <script src="{{ $script.RelPermalink }}"></script>
 </body>
 </html>
