--- a/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
@@ -6,11 +6,17 @@
 {{ $name := replace (.Get "src") "../" "" }}
 {{ with $raw_img := .Page.CurrentSection.Resources.GetMatch $name }}
 {{ $resized := $raw_img.Resize "x400 q80"}}
-<figure class="gallery-figure">
-    <img class="gallery-figure__img" src={{ $resized.RelPermalink }} alt="{{ $alt }}">
-    <figcaption class="gallery-figure__caption">
-        <h4>{{ $headline }}</h3>
-        <p>{{ $inner }}</p>
-    </figcaption>
-</figure>
+
+{{ $modal_id := $raw_img | urlize }}
+{{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $resized)}}
+<div>
+    <figure class="gallery-figure">
+        <img class="gallery-figure__img" src={{ $resized.RelPermalink }} alt="{{ $alt }}" data-micromodal-trigger="lightbox-{{ $modal_id }}">
+        <figcaption class="gallery-figure__caption">
+            <h4>{{ $headline }}</h3>
+                <p>{{ $inner }}</p>
+        </figcaption>
+    </figure>
+    {{ partial "modal" $figure_context }}
+</div>
 {{ end }}
