--- a/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
@@ -9,8 +9,8 @@
 
 {{ $modal_id := $raw_img | urlize }}
 {{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $resized)}}
-<div>
-    <figure class="gallery-figure">
+<div class="gallery-figure">
+    <figure class="gallery-figure__figure">
         <img class="gallery-figure__img" src={{ $resized.RelPermalink }} alt="{{ $alt }}" data-micromodal-trigger="lightbox-{{ $modal_id }}">
         <figcaption class="gallery-figure__caption">
             <h4>{{ $headline }}</h3>
