--- a/themes/burns-exhibits/layouts/partials/exhibit-list.html
+++ b/themes/burns-exhibits/layouts/partials/exhibit-list.html
@@ -11,17 +11,17 @@
         {{ $first_two := first 2 $section }}
 
         {{/* Gets the last six of the first eight */}}
-        {{ $last_six := last 6 $section }}
+        {{ $next_six := last 6 $section }}
 
         {{ range $first_two }}
-        <li>
-            <a href="{{ .RelPermalink}}" style="font-weight: bold;">
-            {{safeHTML .Params.Pre}}{{.Params.exhibit_title}}{{safeHTML .Params.Post}}
-            </a>
-        </li>
+        {{/* First two stuff here */}}
         {{ end }}
 
-        {{ range $last_six }}
+        {{ range $next_six }}
+        {{/* First two stuff here */}}
+        {{ end }}
+
+        {{ range $section }}
         <li>
             <a href="{{ .RelPermalink}}" style="font-size: .85em;">
             {{safeHTML .Params.Pre}}{{.Params.exhibit_title}}{{safeHTML .Params.Post}}
