Make rows consistent. Fixes #19, fixes #25

--- a/themes/burns-exhibits/layouts/partials/exhibit-list.html
+++ b/themes/burns-exhibits/layouts/partials/exhibit-list.html
@@ -18,7 +18,7 @@
         {{ end }}
 
         {{ range $next_six }}
-        {{/* First two stuff here */}}
+        {{/* Next six stuff here */}}
         {{ end }}
 
         {{ range $section }}
