Set max height for large gallery images. Fixes #24

--- a/themes/burns-exhibits/assets/sass/shortcodes/large-gallery-figure.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/large-gallery-figure.scss
@@ -63,8 +63,8 @@
 }
 
 .large-gallery-figure__img {
-    width: 100%;
-    cursor: pointer
+    cursor: pointer;
+    max-height: 400px;
 }
 
 .large-gallery-figure__caption {
