Markdownify front caption text. Fixes #23

--- a/themes/burns-exhibits/layouts/exhibit/list.html
+++ b/themes/burns-exhibits/layouts/exhibit/list.html
@@ -10,7 +10,7 @@
         {{ end }}
         <figcaption>
             <h3>{{ .Params.front_caption_headline }}</h3>
-            <p>{{ .Params.front_caption_text }}</p>
+            <p>{{ .Params.front_caption_text | markdownify }}</p>
         </figcaption>
     </figure>
 </div>
